--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="a">#F44336</color>
+    <color name="b">#9C27B0</color>
+    <color name="c">#03A9F4</color>
 </resources>
